remove bug--overflow posts

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,6 +1,5 @@
 #home-container {
-  display: flex;
-  flex-direction: row; }
+  display: flex; }
   #home-container #feed-posts {
     width: 70%;
     padding: 10px; }
