--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,8 +1,12 @@
 body {
   margin: 0;
-  /* text-align: center; */
 
   #layout-main {
     height: 100%;
+  }
+
+  #main-container{
+    display: flex;
+    flex-direction: column;
   }
 }
